--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
     "private": true,
-      "scripts": {
-      "build": "nuxt build",
-      "dev": "nuxt dev",
-      "generate": "nuxt generate",
-      "preview": "nuxt preview"
+    "scripts": {
+        "build": "nuxt build",
+        "dev": "nuxt dev",
+        "generate": "nuxt generate",
+        "preview": "nuxt preview"
     },
     "devDependencies": {
-      "nuxt": "^3.12.4",
-      "@nuxt/content": "^2.13.1"
+        "@nuxt/content": "^2.13.1",
+        "nuxt": "^3.12.4"
     }
-  }
+}
